css/style.css
html{
	height:100%;
}
body {
    margin: 0;
	height:100%;
}

@font-face {
    font-family: "clock-font";
    src: url(../font/clock-font/LCD-BOLD.ttf) format('truetype');
}
.clearfix {
    clear: both;
}

.htmleaf-header{
	width: 100%;
    height: 100px;
    background-image: url(../img/nav-bg3.jpg);
    background-position-x: center;  
    background-color: #0d1225;
    color: white;
}
.htmleaf-header .big-title{
	display: inline-block;
    line-height: 100px;
    font-size: 2.5em;
    padding-left: .5em;
	font-weight: bold;
    text-shadow: 3px 3px 2px blue;
}

nav {
    font-family: Helvetica;
    text-align: left;
    text-transform: uppercase;  
    background-color: #222;
}

nav ul {
    width: 90%;
    max-width: 1024px;
    margin: 0 auto;
    list-style-type: none;
}

nav ul li {
    display: inline-block;
}

nav ul li a {
    color: #9d9d9d;
    font-weight: bold;
    text-decoration: none;
    display: inline-block;
    padding: 1em;
    box-sizing: border-box;
}

nav ul li a:hover {
    color: white;
}

.current_page {
    background-color: black;
}

.current_page a {
    color: white;
}

#menu_button_wrapper{
    display: none;
}

.hidden {
    display: none;
}

#menu-wrapper-title{
	float:left;
	font-size:2em;
	text-shadow: 1px 1px 1px greenyellow;
	color:white;
}

#footer{
	min-height:50px;
    background: #222222;
	color:#9d9d9d;
	text-align:center;
}

#footer .copyright{
	line-height:50px;
	padding-top: 10px;
}

.copyright ul{
	display:inline-block;
	margin:0;
	vertical-align: middle;
	padding-left: 0;
}

.copyright ul li{
	display:inline-block;
	width:40px;
	text-align:center;
}
.copyright ul li a{
	width: 1.5em;
    height: 1.5em;
    display: inline-block;
	background-repeat:no-repeat;
	background-size:cover;
}

.github a{
	background-image:url(../img/icon-github.png);
    
}

.blog a{
	background-image:url(../img/icon-blog.png);
}

.csdn a{
	background-image:url(../img/icon-csdn.png);
}
.wechat a{
	background-image:url(../img/wechat.png);
}
.sf a{
	background-image:url(../img/icon-sf.png);
}

.icon-read{
    background-image: url(../img/icon-read.png);
    height: 14px;
    width: 16px;
    display: inline-block;
    background-size: cover;
}

#main{
    width: 100%;
    height: auto;
    min-height:100%;
    line-height: 25px;
    text-align: center;
    padding: 20px;
    background-color: #f7f5f5;
}
#main .container{

}
#all-blog-list-content{
    min-height: 400px;
    background: white;
    padding: 15px;
}

#left-side-content{
    min-height: 300px;
    padding-left:30px;
}
#info-card{
    background: white;
    min-height: 300px;
    width:100%;
}
#clock-card{
    background: white;
    height: 400px;
    width:100%;
    padding: 20px 0;
}
#digital-clock{
    height: 70px;
    width: 240px;
    background: #edf0f1;
    margin: 10px auto;
    line-height: 70px;
    font-size: 42px;
    color: #0d860d;
    font-family: 'clock-font';
    border: 3px solid;
}
.avatar{
    height: 150px;
    border-radius: 50%;
    margin: 10px auto;
}
.info-list{
    list-style-type: none;
    text-align: left;
    color:#6a737d;
    padding: 5px;
    font-family: -apple-system,"Segoe UI",Arial,sans-serif;
}
.info-list .sm-icon{
    display: inline-block;
    width: 16px;
    height: 14px;
    margin-right: 3px;
    background-size: cover;
}
.location .sm-icon{
    background-image: url(../img/sm-icon-location.png);
}
.mail .sm-icon{
    background-image: url(../img/sm-icon-mail.png);
}
.blog .sm-icon{
    background-image: url(../img/sm-icon-csdn.png);
}
.link .sm-icon{
    background-image: url(../img/sm-icon-link.png);
}


#main .blog-item{
    min-height:150px;
    width: 100%;
    text-align: left;
}
.item-separator{
    width: 100%;
    height: 1px;
    background: gray;
}

.blog-title{
    font-weight:bold;
    word-break: keep-all;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.blog-brief{
    height: 75px;
    text-indent: 2em;
    overflow: hidden;
    color: #888686;
    font-size: 0.9em;
}
.blog-item-bottom{
    height: 25px;
    bottom: 0;
    font-size: 0.9em;
    color: #a3a9a9;
}
.bottom-left{
    float: left;
}
.bottom-right{
    float: right;
}
.blog-read-count span{
    margin:0 5px;
}

/* Responsive for smaller screens */

@media (max-width: 768px) {
	.htmleaf-header{
		display:none;
	}
    #menu_button_wrapper{
        display: block;
        padding: 1em;
        color: #9d9d9d;
        border-bottom: 1px solid #101010;
        -webkit-box-shadow: 0 1px 0 rgba(255,255,255,.1);
        box-shadow: 0 1px 0 rgba(255,255,255,.1);
        margin-bottom: .5em;
    }
    
    #menu_button {
        box-sizing: border-box;
        float: right;
        padding: .5em 1em;
        border: 1px solid #333;
        border-radius: 5px;
        color: white;
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
    }
    
    #menu_button:hover {
        cursor: pointer;
        background-color: #333;
    }
    
    #hamburger {
        float: right;
        padding-top: .15em;
    }
    
    #menu_button span{
        display: block;
        background-color: #fff;
        width: 1.2em;
        height: .15em;
        border-radius: 1px;
        margin-bottom: .2em;
    }
    
    nav ul {
        width: 100%;
        margin: 0 auto;
        padding: 0;
        box-sizing: border-box;
    }

    nav ul li {
        display: block;
    }
    
    nav ul li a {
        width: 100%;
    }

    #main{
        padding: 2px;
    }
    #main .container{
        padding-right: 5px;
        padding-left: 5px;
    }
    #all-blog-list-content{
        padding:5px;
    }

}
@media (max-width: 992px) {
    #left-side-content{
        display: none;
    }
}

